# aragog

./: .env.example  .gitignore  Pulumi.yaml  README.md  TODO.md  __main__.py  pyproject.toml  requirements.txt  set_env.sh
conf/: logging.yml
conf/base/: catalog.yml  catalog_deploy_custom_rag.yml  catalog_deploy_playground_rag.yml  catalog_evaluate_blueprints.yml  catalog_setup_playground.yml  example-globals.yml  parameters_deploy_champion.yml  parameters_deploy_custom_rag.yml  parameters_deploy_dr_streamlit_app.yml  parameters_evaluate_blueprints.yml  parameters_setup_playground.yml
conf/local/: example-credentials.yml
include/custom_rag/: custom.py  local_helpers.py  model-metadata.yaml.jinja  requirements.txt
include/qa_pairs/: fifth_third.csv
pulumi_utils/: helpers.py
src/aragog/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/aragog/pipelines/deploy_custom_rag/: nodes.py  pipeline.py
src/aragog/pipelines/evaluate_blueprints/: nodes.py  pipeline.py
src/aragog/pipelines/setup_playground/: nodes.py  pipeline.py
src/aragog/pulumi_utils/: helpers.py
